--- a/DinerMax3000WPFClient/MainWindow.xaml
+++ b/DinerMax3000WPFClient/MainWindow.xaml
@@ -11,7 +11,17 @@
     </Window.DataContext>
     <Grid>
         <StackPanel>
-            <ComboBox ItemsSource="{Binding AllMenus}"></ComboBox>
+            <ComboBox Name="cboAllMenus" SelectedItem="{Binding SelectedMenu}" ItemsSource="{Binding AllMenus}" DisplayMemberPath="Name"></ComboBox>
+            <DataGrid ItemsSource="{Binding SelectedMenu.items}" />
+            <WrapPanel>
+                <Label>Title</Label>
+                <TextBox Width="150" Text="{Binding NewMenuItem.Title}"></TextBox>
+                <Label>Price</Label>
+                <TextBox Width="50" Text="{Binding NewMenuItem.Price}"></TextBox>
+            </WrapPanel>
+            <Label>Description</Label>
+            <TextBox Text="{Binding NewMenuItem.Description}"></TextBox>
+            <Button Click="Button_Click">Save new menu item</Button>
         </StackPanel>
     </Grid>
 </Window>
