--- a/DinerMax3000WPFClient/MainWindow.xaml
+++ b/DinerMax3000WPFClient/MainWindow.xaml
@@ -12,16 +12,9 @@
     <Grid>
         <StackPanel>
             <ComboBox Name="cboAllMenus" SelectedItem="{Binding SelectedMenu}" ItemsSource="{Binding AllMenus}" DisplayMemberPath="Name"></ComboBox>
-            <DataGrid ItemsSource="{Binding SelectedMenu.items}" />
-            <WrapPanel>
-                <Label>Title</Label>
-                <TextBox Width="150" Text="{Binding NewMenuItem.Title}"></TextBox>
-                <Label>Price</Label>
-                <TextBox Width="50" Text="{Binding NewMenuItem.Price}"></TextBox>
-            </WrapPanel>
-            <Label>Description</Label>
-            <TextBox Text="{Binding NewMenuItem.Description}"></TextBox>
-            <Button Click="Button_Click">Save new menu item</Button>
+            <DataGrid CanUserAddRows="True" ItemsSource="{Binding SelectedMenu.items}" RowEditEnding="DataGrid_RowEditEnding" />
+         
+           <Button Click="Button_Click">Save all new menu items</Button>
         </StackPanel>
     </Grid>
 </Window>
